--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     startCommand: "gunicorn core.wsgi:application --bind=0.0.0.0:$PORT --workers=2 --threads=4 --worker-class=gthread --worker-tmp-dir=/dev/shm --timeout 120"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.12.8
+        value: 3.11.11  # Changed to match available version
       - key: PORT
         value: 8000
       - key: DATABASE_URL
@@ -22,7 +22,7 @@ services:
       - key: DEBUG
         value: false
       - key: ALLOWED_HOSTS
-        value: ".onrender.com,localhost,aurora.ucoe.co.in,127.0.0.1"
+        value: ".onrender.com,localhost,127.0.0.1"
       - key: RENDER_EXTERNAL_URL
         value: "https://ru-backend.onrender.com"
       - key: DJANGO_SUPERUSER_USERNAME
